birdfont (0.21) stable;

  * Bugfixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Fri Jul  5 22:45:40 CEST 2013

birdfont (0.20) stable;

  * Descriptive fields in TTF fonts (like version number and name)
  * Kerning for both Chrome and Firefox
  * Read TTF font instead of SVG font in html template
  * Bugfixes
  * Improved translations

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Fri Jul  5 14:13:25 CEST 2013

birdfont (0.19) stable;

  * Descriptions from the Unicode Character Database
  * A new file format (.bf replaces .ffi)
  * Bugfixes
  * Two quadratic points with a hidden point in between creates a quadratic path with two line handles
  * Quadratic points is now the default
  * Scrollbar
  * TTF export on MacOS
  * French translation

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Thu Jun 20 16:15:08 CEST 2013

birdfont (0.18) stable;

  * Bugfixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Tue Feb 26 16:28:20 CET 2013

birdfont (0.17) stable;

  * Macports validation

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Feb 25 23:46:00 CET 2013

birdfont (0.16) stable;

  * Correct location in ID loadcommand for Macports

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Feb 25 23:46:00 CET 2013

birdfont (0.15) stable;

  * Macports file

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Feb 25 23:46:00 CET 2013

birdfont (0.14) stable;

  * Bugfixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Feb 24 17:43:00 CET 2013

birdfont (0.13) stable;

  * Quadratic Bézier paths
  * Edit SVG fonts
  * Open OTF and TTF fonts with freetype2
  * Open Type kerning (GPOS pair adjustment positioning subtable)
  * Bugfixes
  * Spanish translation
  * Russian translation
  * Italian translation
  * Brasilian Portuguese translation

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sat Feb 23 19:56:51 CET 2013

birdfont (0.12) stable;

  * Bugfixes and updated test suit
