@@ -1,3 +1,10 @@
+birdfont (0.22) stable;
+
+  * Bugfixes for changes to make BirdFont run on Mac OS X
+  * Preview is removed on Mac OS X
+
+ -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Jul  6 21:28:000 CEST 2013
+
 birdfont (0.21) stable;
 
   * Bugfixes
